Fix section 1 cards align - fix section 2 link button

--- a/css/style.css
+++ b/css/style.css
@@ -219,9 +219,13 @@ body{
 .white-card .drawing-text-box > a{
     background-color: var(--purple-color);
     display: inline-block;
-    padding: 15px;
+    padding: 11px 15px;
     border-radius: 50%;
     margin: 30px 0;
+}
+
+.white-card .drawing-text-box > a > i{
+    color: black;
 }
 
 .drawing-img-box{
@@ -479,6 +483,15 @@ body{
         margin: 10px 10px;
     }
 
+    .card-big > .card-top > .card-text{
+        width: 80%;
+    }
+    
+    .card .card-text{
+        width: 100%;
+        padding-right: 20px;
+    }
+
     .card-bottom{
         justify-content: flex-start;
     }
@@ -560,6 +573,15 @@ body{
     .card{
         width: calc((100% / 3) - 20px);
         margin: 10px 10px;
+    }
+
+    .card-big > .card-top > .card-text{
+        width: 80%;
+    }
+    
+    .card .card-text{
+        width: 100%;
+        padding-right: 20px;
     }
 
     .card-big .card-top{
